--- a/kiddora/templates/core/notlogged_home.html
+++ b/kiddora/templates/core/notlogged_home.html
@@ -110,7 +110,7 @@
                     <ul>
                         <li><a href="{% url 'core:contact_us' %}">Contact Us</a></li>
                         <li><a href="{% url 'core:about_us' %}">About Us</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="{% url 'core:blog' %}">Blog</a></li>
                     </ul>
                 </div>
 <!-- Policies -->
@@ -118,9 +118,9 @@
                     <h4>Policies</h4>
                     <ul>
                         <li><a href="{% url 'core:privacy_policy' %}">Privacy Notice</a></li>
-                        <li><a href="#">Return Policy</a></li>
+                        <li><a href="{% url 'core:return_policy' %}">Return Policy</a></li>
                         <li><a href="{% url 'core:terms_conditions' %}">Terms and Conditions</a></li>
-                        <li><a href="#">Cookie Policy</a></li>
+                        <li><a href="{% url 'core:cookie_policy' %}">Cookie Policy</a></li>
                     </ul>
                 </div>
 <!-- Newsletter -->
