--- a/kiddora/templates/core/product_search.html
+++ b/kiddora/templates/core/product_search.html
@@ -1,4 +1,4 @@
-{% extends "base_user.html" %}
+{% extends "base_admin.html" %}
 {% block title %}Search Results | Kiddora{% endblock %}
 
 {% block content %}
